# Anime-rec-agents

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/crew/: __init__.py  agents.py  recommendation_crew.py  tasks.py
app/services/: mal_import_service.py  profile_service.py  recommendation_service.py
app/tools/: __init__.py  mal_user_list_tool.py
docs/: project_plan.md
tests/: test_mal_import_service.py  test_profile_service.py  test_recommendation_api.py
